force-app/main/default/objects/Health_Check_Log__c/Health_Check_Log__c.object-meta.xml
<CustomObject>
    <label>Health Check Log</label>
    <nameField>
        <displayFormat>HCL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Check Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>