force-app/main/default/objects/Health_Check_Log__c/fields/Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Time__c</fullName>
    <label>Check Time</label>
    <type>DateTime</type>
</CustomField>