force-app/main/default/objects/Health_Check_Log__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FJ</fullName>
            </value>
            <value>
                <fullName>EXT</fullName>
            </value>
            <value>
                <fullName>SCHED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>