force-app/main/default/objects/Health_Check_Log__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recorded By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Health Check Logs (Recorded By)</relationshipLabel>
    <relationshipName>Health_Check_Logs_User</relationshipName>
    <type>Lookup</type>
</CustomField>