force-app/main/default/objects/Health_Check_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Red-Decision:FJ</fullName>
            </value>
            <value>
                <fullName>Red-Decision:EXT</fullName>
            </value>
            <value>
                <fullName>Red-Decision:SCHED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>