force-app/main/default/objects/Health_Check_Log__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Health Check Logs</relationshipLabel>
    <relationshipName>Health_Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>